# Snake

./: .gitignore  CMakeLists.txt  README.md  justfile
assets/shader/: snake.frag  snake.vert
include/: constants.h  game.h  model.h  pch.h  render.h  shader.h  utils.h
include/glad/: gl.h
src/: constants.c  game.c  main.c  model.c  render.c  shader.c  utils.c
